removed another scrollbar

--- a/Responsive-Portfolio/assets/css/style.css
+++ b/Responsive-Portfolio/assets/css/style.css
@@ -219,10 +219,14 @@ input[type=submit] {
 #masthead {
 	overflow: hidden;
 }
-  .work {
+.work {
     width: 100%;
     text-align:center;
-  }
+    }
+
+.work img {
+	height: auto;
+}
 
 nav {
     float: none;
